# Lin

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPRESS_PROGRESS.md  Cargo.toml  FINDINGS.md  FROMJSON_PLAN.md  README.md  RESULT.md  STD_ITER_PROGRESS.md  STREAMS_DESIGN_BRIEF.md  STREAMS_PROGRESS.md  install.sh  min.lin  release-plz.toml
.claude/agents/: lin-engineer.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: build-binaries.yml  ci.yml  docs.yml  release-plz.yml  release.yml
benchmarks/: README.md  array_pipeline.lin  async_await.lin  closures.lin  cse_field_reads.lin  map_flat_scalar.lin  map_index_signature.lin  object_access.lin  object_equality.lin  parallel_speedup.lin  record_array_scan.lin  recursion.lin  shared_lock.lin  string_build.lin  thread_pool.lin  worker_roundtrip.lin
benchmarks/compare/: README.md  compare.sh
crates/lin/: Cargo.toml
crates/lin-check/: Cargo.toml
crates/lin-check/src/: checker.rs  compat.rs  env.rs  exhaustiveness.rs  lambda_set_stats.rs  lib.rs  resolve.rs  signature.rs  typed_ir.rs  types.rs  widen.rs  zonk.rs
crates/lin-check/src/checker/: call.rs  expr.rs  function.rs  helpers.rs  intrinsics.rs  mod.rs  ops.rs  pattern.rs  stmt.rs
crates/lin-check/tests/: snapshots.rs  type_check.rs
crates/lin-check/tests/snapshots/: snapshots__snap_missing_object_field.snap  snapshots__snap_scalar_annotation_on_array_literal.snap
crates/lin-codegen/: Cargo.toml
crates/lin-codegen/src/: codegen.rs  coverage.rs  lib.rs
crates/lin-codegen/src/codegen/: arith.rs  boxing.rs  builder_ext.rs  call.rs  data.rs  debug_info.rs  intrinsics.rs  literals.rs  match.rs  mod.rs  rc.rs  runtime.rs  types.rs
crates/lin-codegen/src/codegen/data/: array.rs  coerce.rs  index.rs  object.rs
crates/lin-common/: Cargo.toml
crates/lin-compile/: Cargo.toml
crates/lin-compile/src/: lib.rs
crates/lin-ir/: Cargo.toml
crates/lin-lex/: Cargo.toml
crates/lin-lsp/: Cargo.toml
crates/lin-lsp/src/: main.rs
crates/lin-parse/: Cargo.toml
crates/lin-runtime/: Cargo.toml  lin.h
crates/lin-runtime/src/: array.rs  async_rt.rs  bignum.rs  columnar.rs  crypto.rs  decimal.rs  decode.rs  env.rs  fault.rs  ffi.rs  frozen.rs  fs.rs  http.rs  io.rs  jq.rs  json.rs  lib.rs  map.rs  math.rs  memory.rs  net.rs  number.rs  object.rs  os.rs  path.rs  process.rs  random.rs  regex.rs  repr_verify.rs  sealed.rs  server.rs  shared.rs  signal.rs  stream.rs  string.rs  sumnode.rs  tagged.rs  template.rs  time.rs  transfer.rs  (+3 more)
crates/lin-runtime/tests/: object_bench.rs  object_index_fuzz.rs
crates/lin/src/: main.rs
crates/lin/src/cmd/: build.rs  check.rs  fmt.rs  mod.rs  run.rs  test.rs  watch.rs
crates/lin/tests/: integration.rs
docs/: ASYNC_DESIGN.md  COMPILER.md  COMPILER_COHERENCE.md  DECISIONS.md  DESIGN_default_args.md  EXAMPLE.md  IR_PARITY_LEDGER.md  MEMORY_MANAGEMENT.md  PERFORMANCE.md  REPR_PASS_DESIGN.md  SEALED_RECORDS_DESIGN.md  SPECIFICATION.md  STDLIB.md  TODO.md  UNBOXED_SUMTYPE_DESIGN.md  design-arena-allocation.md  design-columnar-arrays.md  design-interp-call-axis.md  investigation-arena-allocator.md  project-actually-improve-performance.md  project-cleanup-compiler.md  project-performance-take-five.md
docs-site/: KNOWN_ISSUES.md  README.md
docs-site/builder/: PROSE_MIGRATION_BRIEF.md  gen-stdlib.lin  hero.lin  main.lin  markdown.lin  nav.lin
docs-site/content/: changelog.md  getting-started.md  index.md  nav.json
docs-site/deploy/: org-site-pages.yml
docs-site/examples/: async.lin  functional.lin  http.lin  low-level.lin  pattern-matching.lin  threading.lin  union-types.lin
docs-site/exercises/: README.md
docs-site/templates/: base.jinja  home.jinja  home.lint  page.jinja  page.lint
docs/proposals/: PLAN-path7-path8.md  hashed-json-object-AGENT-BRIEF.md  hashed-json-object.md  numeric-key-maps.md  path-0-prerequisites.md  path-1-integrate-packed-records.md  path-10-layout-as-a-type-system-fact.md  path-10-the-data-adventure.md  path-11-lambda-set-specialization.md  path-11-the-call-adventure.md  path-12-eight-byte-tagged-value.md  path-13-ownership-parameter-conventions.md  path-14-whole-program-spine.md  path-2-fast-dynamic-inline-caches.md  path-3-arena-allocation-construction-cost.md  path-3-value-semantics-memory-model.md  path-4-distinct-struct-kind.md  path-4-whole-program-region-inference.md  path-5-value-records.md  path-6-eliminate-call-dispatch-cost.md  path-7-tracing-gc-foundation.md  path-8-make-functions-free.md  path-9-end-to-end-packed-records.md  projection-aliasing-uaf.md  stdlib-json-typing-audit.md  typed-map-index-signature.md
editors/vscode/: .gitignore  .vscodeignore  README.md  client.js  esbuild.js  package-lock.json  package.json
examples/: arithmetic.lin  closures.lin  custom-iterator.lin  data-pipeline.lin  ffi-c.lin  from-json.lin  full-example.lin  functions.lin  hello.lin  http-client.lin  iterators.lin  low-level.lin  multi-file.lin  objects.lin  pattern-match.lin  showcase.lin  strings.lin  template.lin  template.lint
examples/calc/: README.md  calc.lin  eval.lin  eval.test.lin  integration.test.lin  lexer.lin  lexer.test.lin  main.lin  parser.lin  parser.test.lin
examples/codec/: README.md  bits.lin  bits.test.lin  integration.test.lin  main.lin  tlv.lin  tlv.test.lin
examples/columnar-poc/: main.lin
examples/concurrency/: README.md  integration.test.lin  main.lin  services.lin  services.test.lin  tasks.lin  tasks.test.lin
examples/config/: README.md  decode.lin  decode.test.lin  integration.test.lin  (+6 more)
stdlib/: archive.lin  archive.test.lin  array.lin  array.test.lin  async.lin  async.test.lin  bignum.lin  bignum.test.lin  bitwise.test.lin  bytes.lin  bytes.test.lin  compress.lin  compress.test.lin  crypto.lin  crypto.test.lin  csv.lin  csv.test.lin  datetime.lin  datetime.test.lin  decimal.lin  decimal.test.lin  encoding.lin  encoding.test.lin  env.lin  env.test.lin  event.lin  event.test.lin  ffi.lin  ffi.test.lin  fs.lin  fs.test.lin  hash.lin  hash.test.lin  http.lin  http.test.lin  io.lin  io.test.lin  iter.lin  iter.test.lin  jq.lin  (+41 more)
(+687 files in other folders)
