[package]
name = "lin-check"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
lin-common = { path = "../lin-common" }
lin-parse = { path = "../lin-parse" }
indexmap = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
lin-lex = { path = "../lin-lex" }
insta = { workspace = true }
