[package]
name = "lin-codegen"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
lin-common = { path = "../lin-common" }
lin-parse = { path = "../lin-parse" }
lin-check = { path = "../lin-check" }
lin-ir = { path = "../lin-ir" }
inkwell = { version = "0.9", features = ["llvm22-1"] }
indexmap = { workspace = true }
md5 = "0.7"
flate2 = "1"

[build-dependencies]
# nothing needed — llvm-sys finds LLVM via LLVM_SYS_221_PREFIX
