[package]
name = "lin-compile"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
lin-common = { path = "../lin-common" }
lin-lex = { path = "../lin-lex" }
lin-parse = { path = "../lin-parse" }
lin-check = { path = "../lin-check" }
lin-codegen = { path = "../lin-codegen" }
lin-ir = { path = "../lin-ir" }
lin-runtime = { path = "../lin-runtime" }
inkwell = { version = "0.9", features = ["llvm22-1"] }
bincode = { workspace = true }
sha2 = { workspace = true }
