[package]
name = "lin-runtime"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["mimalloc-allocator"]
mimalloc-allocator = ["dep:mimalloc"]

[lib]
name = "lin_runtime"
crate-type = ["staticlib", "rlib"]

[dependencies]
mimalloc = { version = "0.1", optional = true }
lin-common = { path = "../lin-common" }
serde_json = { version = "1", default-features = false, features = ["std"] }
# Jinja-style templating for std/template. default-features off to keep deps minimal;
# `builtins` re-enables {% for %}/{% if %} control flow and the standard filter set
# (which `default-features = false` drops). `serde` lets minijinja consume a
# serde_json::Value as the render context directly. `multi_template` enables the
# `{% extends %}`/`{% block %}`/`{% include %}` inheritance statements, and `loader`
# enables path_loader to resolve referenced templates against a directory — together
# the basis for the layout system used by `render(path, data)` (ADR-048).
minijinja = { version = "2", default-features = false, features = ["builtins", "serde", "multi_template", "loader"] }
ureq = { workspace = true }
libc = "0.2"
serde_yml = "0.0.13"
jaq-core = "3.0.0"
jaq-std = "3.0.0"
jaq-json = "2.0.0"
# Streaming gzip/DEFLATE for std/compress. Pure-Rust miniz_oxide backend (no libz C dep) —
# already in the workspace lockfile via ureq. We use the low-level Compress/Decompress streaming
# API (not the whole-buffer convenience fns) so the stream adapters work chunk-by-chunk.
flate2 = "1"
glob = "0.3"
tempfile = "3"
regex = "1"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
digest = "0.10"
hmac = "0.12"
getrandom = "0.2"
uuid = { version = "1", features = ["v4", "v7"] }
subtle = "2"
url = "2"
sysinfo = { version = "0.39.3", default-features = false, features = ["system"] }
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = { version = "1", default-features = false }
