[package]
name = "lin"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
lin-common = { path = "../lin-common" }
lin-lex = { path = "../lin-lex" }
lin-parse = { path = "../lin-parse" }
lin-check = { path = "../lin-check" }
lin-compile = { path = "../lin-compile" }
clap = { workspace = true }
rayon = { workspace = true }
notify = { workspace = true }
glob = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = "1"

[dev-dependencies]
tiny_http = { workspace = true }
